deploy/staging/ingress-staging.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-staging
  name: dict
  namespace: mialkin
spec:
  tls:
    - hosts:
        - dict.mialkin.ru
      secretName: letsencrypt-dict-staging-tls-secret
  rules:
    - host: dict.mialkin.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dict
                port:
                  number: 80
